Fruther refined comments and code. Could use some more comments but id say its fit for submission